overlay/k3s/db-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-database
spec:
  template:
    spec:
      containers:
      - name: mariadb
        volumeMounts:
        - name: mariadb-pv
          mountPath: /var/lib/mysql
      volumes:
      - name: mariadb-pv
        persistentVolumeClaim:
          claimName: dev-keycloak-database
