overlay/k3s/ingress.yaml


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-keycloak
  namespace: dev-keycloak
  annotations:
    kubernetes.io/ingress.class: "traefik"    
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - dev.keycloak.crp.sekthor.ch
    secretName: minio-tls-cert
  rules:
    - host: dev.keycloak.crp.sekthor.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
